kubernetes/test/app-test-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment-test
  labels:
    app: worker-app-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-app-test
  template:
    metadata:
      labels:
        app: worker-app-test
    spec:
      containers:
        - name: worker
          image: bethanygrimm/exoplanet_api:1.0
          command: ["src/worker.py"]
          ports:
            - containerPort: 5000
          env:
            - name: REDIS_IP
              value: "exoplanet-redis-service-test"
            - name: REDIS_PORT
              value: "6379"
