kubernetes/test/app-test-ingress-flask.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exoplanet-flask-ingress-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "itstylerbabess-flask-test.coe332.tacc.cloud"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: exoplanet-flask-nodeport-service-test
                port:
                  number: 5000
