kubernetes/test/app-test-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: exoplanet-redis-service-test
spec:
  type: ClusterIP
  selector:
    app: redis-app-test
  ports:
    - name: redis-app-test
      port: 6379
      targetPort: 6379
